# GenerativeAI

./: .gitignore  README.md  Retrieval_Augmented_Generation_with_LLM.ipynb  Retrieval_Augmented_Generation_with_LLM_part_2.ipynb  requirements.txt
Tutorials/: The_art_of_prompt_engineering-20230607-1686096000.ipynb  evadb_note.ipynb  hugging_face_transformers.ipynb
chromadb_cli/: README.md  chromadb_cli.py  requirements.txt
evals/: 20231020_011207.json  20231020_011227.json
evals/llms/: llm.py
llm_using_Javascript/: index.js  package-lock.json  package.json
llms/: llms.py
notebooks/: 10_Ollama_with_rag_using_chroma.ipynb  11_SQL_methods_langchain.ipynb  12_Prompt_optimization_with_DSPy.ipynb  13_Sentence_embedding.ipynb  14_create_synthetic_data_annotation_with_llms.ipynb  15_Crewai.ipynb  16_try_txtai.ipynb  17_auto_prompt_using_dspy.ipynb  18_try_taipy.ipynb  1_Retrieval_Augmented_Generation_with_LLM.ipynb  20_faster_generation_self_speculative_decoding.ipynb  21_data_validation_with_Pydantic.ipynb  22_hugging_face_transformer.ipynb  23_fine_tune_embedding_model_for_rag.ipynb  2_Retrieval_Augmented_Generation_with_LLM_part_2.ipynb  3_Chatbot_with_LLM.ipynb  4_LLM_tasks-using_HF_transformers_pipeline.ipynb  5_Use_Qunatized_Mistral7b.ipynb  6_Vectordb_chromadb.ipynb  7_AI_Financial_Analyst.ipynb  8_Ollama_llama_model_with_prompt.ipynb  9_Ollama_mistral_model_with_prompt.ipynb  embeddings.pkl  speech_speech.ipynb
page_summarization/: README.md  pyproject.toml  requirements.txt
page_summarization/page_summarization/: utils.py
rag-app/: README.md
(+4 files in other folders)
