[tool.poetry]
name = "page-summarization"
version = "0.1.0"
description = ""
authors = ["Adebayo Akinlalu <aakinlalu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
langchain = "^0.1.0"
requests = "^2.32.0"
bs4 = "^0.0.1"
gpt4all = "^1.0.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
